--- a/Project/appengine/templates/backend/teacher.html
+++ b/Project/appengine/templates/backend/teacher.html
@@ -36,7 +36,31 @@
                 
             </div>
             <div id="task">
-                
+                <div class="membersOverview">
+                    <div class="statistics">
+                        <h1>The Statistics Will Be Here</h1>
+                    </div>
+                    <div style="border-top: 1px solid grey;"></div>
+                    <div class="dropdownBar">
+                        <i class="fas fa-angle-down"></i>
+                    </div>
+                    <div class="members">
+                        <div class="up">
+                            <i class="fas fa-angle-up"></i>
+                        </div>
+                        <div style="border-top: 1px solid grey;"></div>
+                        <div class="methods">
+                            <a href="javascript:void(0);">調整排序順序</a>
+                            <a href="javascript:void(0);">新增成員</a>
+                            <!-- <i class="fas fa-ellipsis-h"></i> -->
+                        </div>
+                        <div class="member">
+                            <span class="memberID">USERID</span>
+                            <span class="memberName">USERNAME</span>
+                            <div class="completeDegree"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         
