--- a/Project/appengine/static/user/teacher.css
+++ b/Project/appengine/static/user/teacher.css
@@ -26,7 +26,7 @@ button{
     outline: none;
     border-radius: 3px;
     width: 50px;
-    margin:5px;
+    /* margin:5px; */
     cursor: pointer;
 }
 
