--- a/Project/appengine/templates/user/users.html
+++ b/Project/appengine/templates/user/users.html
@@ -92,8 +92,6 @@
     </div>
     <div class="letter" id="main-container">
       
-      
-
       <div id="edit" style="display:none;">
         <div id="edit-title">
           <span style="font-size: 40px" data-i18n="edit.title.edit">Edit</span>
@@ -187,7 +185,7 @@
         </div>
       </div>
 
-      <div id="joinTask">
+      <div id="joinTask" style="display:none">
         <p id="joinTaskTitle">
           <span style="font-size:50px">歡迎來到 Debugamo</span>
         </p>
@@ -219,6 +217,62 @@
         <!-- </div> -->
 
 
+      </div>
+
+      <div id="myTask">
+        <p id="myTaskTitle">
+          <span style="font-size:50px">我的任務</span>
+        </p>
+        <div style="border-top:1px solid grey;"></div>
+        <div id="TaskOverview">
+
+          <!-- <div class="taskItem">
+            <div class="task-info-img">
+              <div class="taskImg">
+                This Is Img
+              </div>
+              <div class="userInfo">
+                <p>任務:
+                  <span>Debugging </span>
+                </p>
+                <p>完成度 :
+                  <span>5/4</span>
+                </p>
+                <button>
+                  <a href="/debugging?lang=zh-hant&level=1&user=321&task=debugging" style="color:black">開始遊戲</a>
+                </button>
+              </div>
+              
+              <div style="border-top: 1px solid grey;"></div>
+              <div class="dropdownBar" >
+                  <i class="fas fa-angle-down"></i>
+              </div>
+            </div>
+            <div class="members dropdownContent">
+                <div class="up">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+                <div style="border-top: 1px solid grey;"></div>
+                <div class="methods">
+                  <a href="javascript:void(0);" class='sortedOrder'>排序順序</a>
+                  
+                  <div class="sorting">
+                    <a href="javascript:void(0);" style="margin-top: 10px;"><br>解題速度<br><br></a>
+                    <a href="javascript:void(0);">解題進度</a>
+                  </div>
+                </div>
+                <div class="member">
+                  <span class="SortedNum">1.</span>
+                  <span class="ID" style="margin-left:30px;">321</span>
+                </div>
+                <div class="member">
+                    <span class="SortedNum">1.</span>
+                    <span class="ID" style="margin-left:30px;">321</span>
+                  </div>
+            </div>
+          </div> -->
+
+        </div>
       </div>
 
     </div><!-- letter-->
@@ -253,6 +307,10 @@
 <script>
   $('.courseItem').hover(function(e){
     $(this).children('.courseInformation').slideToggle();
+  })
+  $('.sortedOrder').on('click',function (e) {
+    e.preventDefault();
+    $(this).parent().children('.sorting').slideToggle();
   })
 </script>
 <script src="../../static/user/classEventListener.js"></script>
