--- a/Project/appengine/templates/user/users.html
+++ b/Project/appengine/templates/user/users.html
@@ -226,7 +226,7 @@
         <div style="border-top:1px solid grey;"></div>
         <div id="TaskOverview">
 
-          <!-- <div class="taskItem">
+          <div class="taskItem">
             <div class="task-info-img">
               <div class="taskImg">
                 This Is Img
@@ -270,7 +270,7 @@
                     <span class="ID" style="margin-left:30px;">321</span>
                   </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
       </div>
