--- a/Project/appengine/templates/login/index.html
+++ b/Project/appengine/templates/login/index.html
@@ -105,7 +105,7 @@
                 <select name="lang" id="language-select">
                     <option selected>Choose other language...</option>
                     <option value="en">English</option>
-                    <option value="zh">繁體中文</option>
+                    <option value="zh-hant">繁體中文</option>
                 </select>
                 <div id="copyright-div">
                     <p id="copyright"> 
