--- a/Project/appengine/debugging/public/style.css
+++ b/Project/appengine/debugging/public/style.css
@@ -1022,3 +1022,47 @@ img.showCodeRobot {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.acItem{
+    height: 40px;
+    line-height: 40px;
+    background-color: white;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin-bottom: 10px
+}
+
+#actionList{
+    overflow: scroll;
+}
+
+.backTrackButton{
+    font-size: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin: 3px 4px 3px 0;
+    background-color: rgb(166, 155, 193);
+    height: 24px;
+    float: right;
+    overflow: hidden;
+    border-radius: 4px;
+    line-height: 18px;
+    cursor: pointer;
+    font-family: "Gotham 5r", sans-serif;
+    padding: 3px 9px;
+    border: 0px;
+    color: white;
+}
+
+.backTrackButton:active{
+    border: 0px;
+}
+
+.backTrackButton:focus{
+    outline: 0;
+    border: 0px;
+}
+
+.backTrackButton:hover{
+    background-color: rgb(0, 148, 202);
+}
