--- a/Project/appengine/templates/backend/teacher.html
+++ b/Project/appengine/templates/backend/teacher.html
@@ -54,20 +54,22 @@
                     <div class="dropdownBar">
                         <i class="fas fa-angle-down"></i>
                     </div>
-                    <div class="members">
-                        <div class="up">
-                            <i class="fas fa-angle-up"></i>
+                    <div class="current_course">
+                        <div class="members">
+                            <div class="up">
+                                <i class="fas fa-angle-up"></i>
+                            </div>
+                            <div style="border-top: 1px solid grey;"></div>
+                            <div class="methods">
+                                <a href="javascript:void(0);">調整排序順序</a>
+                                <a href="javascript:void(0);" class="new_member">新增成員</a>
+                                <!-- <i class="fas fa-ellipsis-h"></i> -->
+                            </div>
+                            <!-- <div class="row"> -->
+                            <ul class="member">
+                            </ul>
+                        <!-- </div> -->
                         </div>
-                        <div style="border-top: 1px solid grey;"></div>
-                        <div class="methods">
-                            <a href="javascript:void(0);">調整排序順序</a>
-                            <a href="javascript:void(0);" class="new_member">新增成員</a>
-                            <!-- <i class="fas fa-ellipsis-h"></i> -->
-                        </div>
-                        <!-- <div class="row"> -->
-                        <ul class="member">
-                        </ul>
-                    <!-- </div> -->
                     </div>
                 </div>
             </div>
