--- a/Project/appengine/static/user/style.css
+++ b/Project/appengine/static/user/style.css
@@ -1,64 +1,73 @@
-html{
-    /* height:100%; */
-    height: auto;
+
+#header{
+    padding: 0px 30px 0px 30px;
+    background: #00adbc;
 }
+
 body{
-    margin: 0px;
-    display: grid;
-    grid-template-rows: auto auto;
-    height: auto;
+    background-color: black;
+    background: url('../DE2.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
-.header{
-    background-color: #00adbc;
-    width: 100%;
-    height: 60px;
-    display: grid;
-    grid-template-columns: 2fr 4fr 2fr;
-}
-#left-side{
-    padding:10px;
-
-    text-align: center;
+#header nav a{
     color: white;
+}
+
+#header .dropdown-item{
+    color: black;
 }
 
 #title{
-    margin: 8px auto;
-}
-#right-side{
-    padding: 10px;
-    padding-right: 15px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1.5fr;
-    text-align: center;
-}
-#right-side a.normal{
-    text-decoration: none;
-    background:none;
-    border: 0px;
     color: white;
-    margin: 8px auto;
 }
-#right-side #setting{
-    background: none;
-    border: 0px;
+
+#left{
+    border-right: 1px solid lightgrey;
+}
+
+#mid{
+    height: 55em;
+    
+}
+
+.row{
+    height: 100%;
+}
+
+li.nav-item a{
     color: white;
-    font-size: 15px;
-    height: 40px;
-    /* margin-top: 8px;
-    margin-bottom: 8px; */
 }
-#setting-dropdown-div{
-    background: #00adbc;
+
+#header div.headerContent{
+    /* width: 40%; */
+    display: inline-block;
+}
+
+#header div#headerLeft{
+    width: 70%;
+}
+
+#headerRight li{
+    margin-left: 5px;
+    background-color: #00adbc;
     border-radius: 5px;
-    color: white;
-    text-decoration: none;
+    transition: .3s ease;
 }
-#setting-dropdown-div .dropdown-container a{
-    border-top:1px lightgrey solid;
-    font-size: 15px;
-    color: white;
+
+#headerRight li:hover{
+    background-color: #0f9ba8;
+}
+
+
+/*============================================*/
+
+
+
+#log-out{
+    cursor: pointer;
 }
 
 .wrapper{
@@ -101,12 +110,12 @@ body{
 #info{
     /* margin-left: 5px;
     margin-right: 5px; */
-    margin-bottom: 30px;
-    height: 100px;
-    background-color: white;
+    margin: 35px 0px 5px 0px;
+    height: 40%;
+    background-color: rgba(255,255,255,0.5);
     /* color: blue; */
     border-radius: 5px;
-    padding: 5px;
+    width: 100%;
     display: inline-block;
     /* border:1px solid lightgrey; */
 }
@@ -199,13 +208,13 @@ body{
     padding: 10px;
     width: 100%;
     background-color: rgb(0, 173, 188);
-    height: auto;
+    height: 80px;
     font-size: 12px;
-    grid-row-start: 3;
+    /* grid-row-start: 3;
     grid-row-end: 4;
     position: fixed;
     left: 0;
-    bottom: 0;
+    bottom: 0; */
     /* margin: 0% -320px; */
     /* position: fixed; */
     /* left: 50%; */
@@ -216,8 +225,13 @@ body{
     text-decoration: none;
     color: white;
 }
-#copyright{
+
+#logo{
     float: right;
+    width: 200px;
+    background:url("../Debugamo.png");
+    height: 50px;
+    background-repeat: no-repeat;
 }
 
 a{
