--- a/Project/appengine/static/user/style.css
+++ b/Project/appengine/static/user/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-color: black;
-    background: url('../DE2.png');
+    background: url('../bc.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -107,12 +107,33 @@ li.nav-item a{
     height: 400px;
 }
 
+.infoName{
+    height: 3em; 
+    margin-top: 1em;  
+}
+
+.infoNameText{
+    
+    height: 100%;
+    line-height: 3em;
+}
+
+.infoSec{
+    padding: 0px 1em 0px 1em;
+    /* display:inline-block; */
+}
+
+#infoText{
+    margin-right: 0px;
+}
+
 #info{
     /* margin-left: 5px;
     margin-right: 5px; */
     margin: 35px 0px 5px 0px;
-    height: 40%;
-    background-color: rgba(255,255,255,0.5);
+    height: 60%;
+    border: 1px solid lightgrey;
+    background-color: rgba(255,255,255,0.8);
     /* color: blue; */
     border-radius: 5px;
     width: 100%;
@@ -120,27 +141,36 @@ li.nav-item a{
     /* border:1px solid lightgrey; */
 }
 #info p{
+    text-align: center;
     color: grey;
     padding: 5px;
-    font-size: 15px;
+    /* font-size: 15px; */
     margin-top: 0px;
     margin-bottom: 0px;
     letter-spacing: 1px;
     line-height: 20px;
+    font-size: 1.3em;
     /* border-bottom:1px solid lightgrey; */
 }
 
 #photo{
     padding: 10px;
-    margin-top: 20px;
+    margin: auto;
+    margin-top: 30px;
+    /* margin-top: 20px; */
     /* margin-left: 5px;
     margin-right: 5px; */
     margin-bottom: 20px;
-    height: 200px;
+    height: 15em;
+    width: 15em;
     /* background-color: rgb(252, 221, 221); */
     border: 1px solid lightgray;
     color: black;
     border-radius: 5px;
+}
+
+.progress{
+    margin-top: 10px;
 }
 
 #options{
