--- a/Project/appengine/static/user/task.css
+++ b/Project/appengine/static/user/task.css
@@ -4,7 +4,7 @@
     border: 1px solid lightgrey;
     margin: 35px 0px 5px 0px;
     box-sizing: border-box;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255,255,255,0.8);
 }
 
 #taskLeft,.frameleft{
@@ -14,7 +14,7 @@
 }
 
 .nameTitle{
-    color: white;
+    /* color: white; */
     font-size: 2em;
 }
 
@@ -186,6 +186,10 @@ ul#mainTasklist,.tasklist{
     height: 30%;
 }
 
+.section.sec.hint{
+    height: 100%;
+}
+
 .name{
     width: 100px;
     height: 50px;
@@ -197,7 +201,7 @@ ul#mainTasklist,.tasklist{
 
 .taskTitle{
     margin-bottom: 0px;
-    color: white;
+    /* color: white; */
 }
 
 .taskTitle{
