finish exp and target Part

--- a/Project/appengine/templates/user/student.html
+++ b/Project/appengine/templates/user/student.html
@@ -240,7 +240,7 @@
                 </p>
               </div>
               <div class="nameText">
-                  <span class="nameBonus">
+                  <span class="nameBonus" id="joinBonus">
                     解完任務就會有獎勵喔！！
                   </span>
               </div>
@@ -335,7 +335,7 @@
                   </p>
                 </div>
                 <div class="nameText">
-                    <span class="nameBonus">
+                    <span class="nameBonus" id="userTaskBonus">
                       解完任務就會有獎勵喔！！
                     </span>
                 </div>
@@ -348,7 +348,7 @@
                     </p>
                 </div>
                 <div class="nameText">
-                  <span class="nameDescription" id="taskDescription">
+                  <span class="nameDescription" id="usertaskDescription">
                     完成目標就能完成任務喔！
                   </span>
                 </div>
