checkout to see the history

--- a/Project/appengine/templates/user/student.html
+++ b/Project/appengine/templates/user/student.html
@@ -75,22 +75,22 @@
           </div>
           <div class="infoSec" id="infoText">
             <div class="infoName">
-              <p class="infoNameText">
-                林友鈞
+              <p class="infoNameText" id="UserInfoName">
+                
               </p>
             </div>
             <div class="infoID">
-              <p class="infoIDText">
-                YuChun
+              <p class="infoIDText" id="UserInfoID">
+                
               </p>
             </div>
           </div>
           <div class="infoSec" style="width:100%;">
-            <p style="text-align:left;">
-              等級 : 15
+            <p style="text-align:left;" id="UserInfoLevel">
+              
             </p>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+              <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="expBar">0%</div>
             </div>
           </div>
         </div>
