--- a/Project/appengine/static/user/edit.css
+++ b/Project/appengine/static/user/edit.css
@@ -6,7 +6,8 @@
     padding: 5%;
     padding-top: 5%;
     box-sizing: border-box;
-
+    background-color: rgba(255, 255, 255, 0.8);
+    margin: 35px 0px 5px 0px;
 }
 
 .item{
